Add callback to store models. Configure notebook for COLAB.

--- a/BoneSegmentation.ipynb
+++ b/BoneSegmentation.ipynb
@@ -39,6 +39,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# Clone the entire repo.\n",
         "!git clone -l -s https://github.com/TopalSolcan/BoneSegmentation_IMA.git cloned-repo"
       ]
@@ -60,7 +70,7 @@
       "outputs": [],
       "source": [
         "from bone_data import BoneData\n",
-        "bone_data = BoneData()"
+        "bone_data = BoneData(work_area=BoneData.COLAB)"
       ]
     },
     {
