Option for callbacks.

--- a/BoneSegmentation.ipynb
+++ b/BoneSegmentation.ipynb
@@ -99,7 +99,9 @@
         "from segmentation import kfold_xnet_test\n",
         "metric_names_list, scores_list = kfold_xnet_test(img_size=img_size, \n",
         "                                                    all_gen=all_gen,\n",
-        "                                                    bone_data=bone_data)"
+        "                                                    bone_data=bone_data, \n",
+        "                                                    batch_size=4, \n",
+        "                                                    epochs=100)"
       ]
     }
   ]
